# famops

./: LICENSE.txt  README.md  pyproject.toml  renovate.json
dlt/: quantified_pipeline.py  requirements.txt
dlt/.dlt/: .sources
quantified/: README.md  pyproject.toml  setup.cfg  setup.py
quantified/quantified/dlt/: quantified_pipeline.py
quantified/quantified/dlt/.dlt/: config.toml
quantified/quantified/dlt/filesystem/: __init__.py  helpers.py  readers.py
quantified/quantified/resources/: __init__.py
