[project]
name = "quantified"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nam D. Nguyen", email = "nnguyen83@gmail.com"},
]
dependencies = [
    "dagster>=1.6.9",
    "dagster-dbt>=0.22.9",
    "dlt>=0.4.6",
    "dbt>=1.0.0.36.9",
    "duckdb>=0.10.0",
    "dbt-duckdb>=1.7.3",
    "dlt[duckdb]>=0.4.3a0",
    "openpyxl>=3.0.0",
    "streamlit>=1.32.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
