[project]
name = "FamOps"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Nam D. Nguyen", email = "nnguyen83@gmail.com"},
]
dependencies = [
    "dagster>=1.6.11",
    "dagster-webserver>=1.6.11",
    "dagster-dbt>=0.22.9",
    "dlt>=0.4.6",
    "dbt>=1.0.0.36.9",
    "duckdb>=0.10.0",
    "dbt-duckdb>=1.7.3",
    "dlt[duckdb]>=0.4.3a0",
    "openpyxl>=3.0.0",
    "streamlit>=1.32.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "ruff>=0.3.3",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
